# plus

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md
apps/plus-task/: Cargo.toml
apps/plus-task/src/: error.rs  main.rs
apps/plus-task/src/core/: mod.rs
apps/plus-task/src/core/env/: mod.rs
apps/plus-task/src/core/support/: build_mode.rs  mod.rs
apps/plus-task/src/core/support/program/: has_program.rs  mod.rs
apps/plus-task/src/core/support/release/: cargo_toml.rs  changed_files.rs  mod.rs  package_name.rs  packages.rs  terminal.rs
apps/plus-task/src/core/targets/: mod.rs
apps/plus-task/src/tasks/: mod.rs
apps/plus-task/src/tasks/assemble_pilot_tests/task/: mod.rs
apps/plus-task/src/tasks/build_apps/: mod.rs  task.rs
apps/plus-task/src/tasks/copy_artifact_files/: mod.rs  task.rs
apps/plus-task/src/tasks/package_artifacts/: mod.rs
apps/plus-task/src/tasks/package_artifacts/task/: mod.rs  params.rs
apps/plus-task/src/tasks/release_apps/: mod.rs  task.rs
apps/plus-task/src/tasks/release_libraries/: mod.rs  task.rs
apps/plus-task/src/tasks/release_libraries/task/: cargo_toml.rs  crates_io.rs  mod.rs  terminal.rs
apps/plus-task/src/tasks/release_libs/: mod.rs  task.rs
apps/plus-task/src/tasks/setup_artifacts_directory/: mod.rs  task.rs
apps/plus-task/src/tasks/shared/: build_mode.rs  build_target.rs  files.rs  git_arg.rs  mod.rs  params.rs
apps/plus-task/src/tasks/show_sizes/: mod.rs  task.rs
apps/plus-task/src/tasks/strip_executables/: mod.rs  task.rs
apps/s3api/: Cargo.toml
apps/s3api/src/: error.rs  errors.rs  main.rs  output.rs  serialize.rs  summary.rs
apps/s3api/src/commands/: get_object.rs  mod.rs  put_object.rs
apps/wsb-task/: Cargo.toml
apps/wsb-task/src/: error.rs  main.rs  output.rs
apps/wsb-task/src/commands/: can_define.rs  mod.rs
apps/wsb-task/src/commands/artifacts/: mod.rs
apps/wsb-task/src/commands/artifacts/artifact_size/: mod.rs  params.rs
apps/wsb-task/src/commands/artifacts/compress_artifact/: mod.rs  params.rs
apps/wsb-task/src/commands/artifacts/copy_as_artifact/: mod.rs  params.rs
apps/wsb-task/src/commands/artifacts/package_artifact/: mod.rs  params.rs
apps/wsb-task/src/commands/cargo/: cargo_build.rs  cc.rs  mac.rs  mod.rs  runner.rs
apps/wsb-task/src/commands/cargo/build_apps/: mod.rs  params.rs  runner.rs
apps/wsb-task/src/commands/cargo/build_pilot/: mod.rs  params.rs  runner.rs
apps/wsb-task/src/commands/cargo/cargo_build/: mod.rs  params.rs  runner.rs
apps/wsb-task/src/commands/provider/: mod.rs
apps/wsb-task/src/commands/strip/: mod.rs  params.rs
apps/wsb-task/src/commands/support/: cc.rs  definable.rs  mac.rs  mod.rs  runnable.rs  should.rs
apps/wsb-task/src/core/: mod.rs
apps/wsb-task/src/core/action/: mod.rs  output.rs
apps/wsb-task/src/core/build_mode/: mod.rs
apps/wsb-task/src/core/env/: mod.rs
apps/wsb-task/src/core/support/: cc.rs  mod.rs  program_exists.rs
apps/wsb-task/src/core/targets/: linux_arm_v7.rs  linux_x86.rs  mac_x86.rs  mod.rs  require_cc.rs
apps/wsb-task/src/tasks/: assemble_pilot_tests.rs  build_apps.rs  build_pilot_tests.rs  compress_artifacts.rs  copy_artifact_files.rs  mod.rs  package_artifacts.rs  show_sizes.rs  strip_executables.rs
apps/wsb-task/src/tasks/assemble_pilot_tests/: mod.rs  params.rs  task.rs
apps/wsb-task/src/tasks/assemble_pilot_tests/task/: mod.rs
apps/wsb-task/src/tasks/build_apps/: mod.rs  task.rs
apps/wsb-task/src/tasks/copy_artifact_files/: mod.rs  task.rs
apps/wsb-task/src/tasks/package_artifacts/: mod.rs  task.rs
apps/wsb-task/src/tasks/package_artifacts/task/: mod.rs  params.rs
apps/wsb-task/src/tasks/params/: mod.rs
apps/wsb-task/src/tasks/shared/: mod.rs  params.rs  target.rs
apps/wsb-task/src/tasks/show_sizes/: mod.rs  task.rs
apps/wsb-task/src/tasks/strip_executables/: mod.rs  task.rs
libs/aws/plus-aws/: Cargo.toml
libs/aws/plus-aws/src/: error.rs  lib.rs
libs/aws/plus-aws/src/auth/account/: access_key.rs  credentials.rs  secret_key.rs
libs/aws/plus-aws/src/auth/v4/: mod.rs
libs/aws/plus-aws/src/env/: mod.rs
libs/aws/plus-aws/src/index/: mod.rs  region.rs
libs/aws/plus-aws/src/io/stream/: bytes_stream.rs
libs/aws/plus-aws/src/verbs/: mod.rs
libs/aws/plus-s3/: Cargo.toml
libs/aws/plus-s3/src/: error.rs  lib.rs
libs/aws/plus-s3/src/actions/: error.rs  mod.rs
libs/aws/plus-s3/src/actions/put_object/: mod.rs  response.rs
libs/aws/plus-s3/src/client/: mod.rs
libs/aws/plus-s3/src/core/: bucket.rs  mod.rs
libs/aws/plus-s3/src/core/request/: mod.rs
libs/aws/plus-s3/src/core/verbs/: has_bucket_scope.rs  mod.rs
libs/aws/plus-s3/src/internal/: error.rs
libs/aws/sabi-s3/: Cargo.toml
libs/aws/sabi-s3/src/: client.rs  error.rs  errors.rs  lib.rs
libs/aws/sabi-s3/src/client/: error.rs  mod.rs
libs/aws/sabi-s3/src/core/: bucket.rs  client.rs  e_tag.rs  error.rs  mod.rs
libs/aws/sabi-s3/src/internal/: error.rs  internal_client.rs  internal_request.rs  mod.rs  request_parts.rs  request_provider.rs  request_resource.rs
libs/aws/sabi-s3/src/operations/: mod.rs
libs/aws/sabi-s3/src/verbs/: has_object_key.rs  mod.rs  to_endpoint.rs
libs/derive-sabi/: Cargo.toml
libs/derive-sabi/src/: delegator.rs  lib.rs
libs/env-extractor/: Cargo.toml  README.md
libs/env-extractor/src/: error.rs  lib.rs  single.rs
libs/sabi-core/: Cargo.toml
libs/sabi-core/src/: error.rs  lib.rs
libs/sabi-core/src/auth/: mod.rs
libs/sabi-core/src/auth/account/: access_key.rs  credentials.rs  mod.rs  secret_key.rs
libs/sabi-core/src/auth/v4/: mod.rs
libs/sabi-core/src/env/: mod.rs
libs/sabi-core/src/http/: mod.rs
libs/sabi-core/src/http/header/: amz_content_sha256.rs  amz_date.rs  content_length.rs  content_type.rs  date.rs  headers.rs  mod.rs
libs/sabi-core/src/http/headers/: header_fragment.rs  header_map.rs  headers.rs  mod.rs
libs/sabi-core/src/index/: mod.rs  region.rs  service.rs
libs/sabi-core/src/io/: body_receiver.rs  copier.rs  mod.rs  reader.rs
libs/sabi-core/src/io/stream/: bytes_stream.rs  mod.rs
libs/sabi-core/src/verbs/: as_bytes.rs
(+277 files in other folders)
