[package]
name = "plus-task"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-extractor = { path = "../../libs/clap-extractor" }
clap-task = { path = "../../libs/clap-task" }
shellwork = { path = "../../libs/shellwork" }

async-trait = "0.1"
clap = "2.33"
failure = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
toml = "0.5"
