[package]
name = "s3api"
version = "0.0.0"
edition = "2018"

[dependencies]
clap-extractor = { path = "../../libs/clap-extractor" }
clap-task = { path = "../../libs/clap-task" }
sabi-s3 = { path = "../../libs/aws/sabi-s3" }
clap = "2.33"
failure = "0.1"
futures = "0.3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
