[package]
name = "s3api"
version = "0.0.1"
edition = "2018"

[dependencies]
clap-extractor = { path = "../../libs/clap-extractor" }
clap-task = { path = "../../libs/clap-task" }
plus-s3 = { path = "../../libs/aws/plus-s3" }
plus-s3-macros = { path = "../../libs/aws/plus-s3-macros" }

async-trait = "0.1"
clap = "2.33"
failure = "0.1"
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros"] }
