[package]
name = "derive-sabi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
# https://github.com/alexcrichton/proc-macro2
proc-macro2 = "1.0"

# https://github.com/dtolnay/quote
quote = "1.0"

# https://github.com/dtolnay/syn
syn = { version = "1.0", features = ["full", "extra-traits"] }
