[package]
name = "sabi-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
crypto-mac = "0.7"
digest = "0.8"
failure = "0.1"
generic-array = "0.13"
hex = "0.4"
hmac = "0.7"
sha2 = "0.8"

# determined by reqwest dependencies
http = "0.2"
url = "2.1"
