[package]
name = "sabi-core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
characters = { path = "../characters" }
env-extractor = { path = "../env-extractor" }

chrono = "0.4"
failure = "0.1"
hex = "0.4"
hmac = "0.7"
sha2 = "0.8"

# reqwest dependencies
http = "0.2"
url = "2.1"

# draft
tokio = { version = "0.2", features = ["full"] }
futures-util = "0.3"
tokio-util = "0.2"
bytes = "0.5"
