[package]
name = "plus-aws"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
characters = { path = "../../characters" }
env-extractor = { path = "../../env-extractor" }

async-trait = "0.1"
bytes = "0.5"
chrono = "0.4"
failure = "0.1"
futures-util = "0.3"
hex = "0.4"
hmac = "0.7"
sha2 = "0.8"
tokio = { version = "0.2", features = ["fs"] }
tokio-util = { version = "0.3", features = ["codec"] }

# reqwest dependencies
http = "0.2"
url = "2.1"
