[package]
name = "plus-s3"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env-extractor = { path = "../../env-extractor" }
plus-aws = { path = "../plus-aws" }

async-trait = "0.1"
bytes = "0.5"
failure = "0.1"
futures-util = "0.3"
tempfile = "3.1"
tokio = { version = "0.2", features = ["fs"] }

# plus-aws dependencies
chrono = "0.4"

# reqwest dependencies
url = "2.1"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "rustls-tls", "stream"]
default-features = false
