[package]
name = "sabi-s3"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sabi-core = { path = "../../sabi-core" }
failure = "0.1"
url = "2.1"

[dependencies.reqwest]
version = "0.10"
features = ["blocking", "rustls-tls"]
default-features = false
